--- a/app/src/main/res/layout/sign_up_main.xml
+++ b/app/src/main/res/layout/sign_up_main.xml
@@ -16,10 +16,11 @@
         android:layout_marginBottom="30dp"/>
 
     <EditText
-        android:id="@+id/editTextPhone"
+        android:id="@+id/PhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="12"
+        android:maxLength="11"
         android:hint="전화번호를 입력하세요. (-제외)"
         android:inputType="phone"
         android:layout_marginBottom="30dp"/>
