--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         </Button>
 
         <Button
+            android:id="@+id/find_id_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
