--- a/app/src/main/res/layout/find_id.xml
+++ b/app/src/main/res/layout/find_id.xml
@@ -63,6 +63,7 @@
     </Button>
 
     <Button
+        android:id="@+id/find_id_cancel"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/green_button"
