--- a/app/src/main/res/layout/find_password.xml
+++ b/app/src/main/res/layout/find_password.xml
@@ -21,12 +21,12 @@
     </TextView>
 
     <EditText
+        android:id="@+id/find_password_email"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:hint="내용을 입력해주세요.">
-
+        android:hint="이메일을 입력해주세요.">
     </EditText>
 
     <TextView
@@ -38,19 +38,21 @@
         android:text="전화번호"
         android:textStyle="bold"
         android:textSize="30dp">
-
     </TextView>
 
     <EditText
+        android:id="@+id/find_PhoneNumber"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:hint="내용을 입력해주세요.">
-
-    </EditText>
+        android:ems="12"
+        android:maxLength="11"
+        android:hint="전화번호를 입력하세요. (-제외)"
+        android:inputType="phone"
+        android:layout_marginBottom="30dp"/>
 
     <Button
+        android:id="@+id/find_password_check"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/green_button"
@@ -61,10 +63,10 @@
         android:text="찾기"
         android:textSize="20dp"
         android:textColor="#ffffff">
-
     </Button>
 
     <Button
+        android:id="@+id/find_password_cancel"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/green_button"
@@ -75,7 +77,6 @@
         android:text="취소"
         android:textSize="20dp"
         android:textColor="#ffffff">
-
     </Button>
 
 
