--- a/app/src/main/res/layout/street_view.xml
+++ b/app/src/main/res/layout/street_view.xml
@@ -20,8 +20,9 @@
         android:id="@+id/back_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#45A116"
+        android:background="@drawable/rounded_green_button"
         android:text="뒤로가기"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
