--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,11 +45,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:background="@drawable/green_button"
+            android:background="@drawable/rounded_green_button"
             android:layout_margin="5dp"
             android:gravity="center"
             android:text="로그인"
-            android:textColor="#ffffff">
+            android:textColor="#000000">
         </Button>
 
         <Button
@@ -57,11 +57,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:background="@drawable/green_button"
+            android:background="@drawable/rounded_green_button"
             android:layout_margin="5dp"
             android:gravity="center"
             android:text="회원가입"
-            android:textColor="#ffffff">
+            android:textColor="#000000">
         </Button>
 
         <Button
@@ -69,11 +69,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:background="@drawable/green_button"
+            android:background="@drawable/rounded_green_button"
             android:layout_margin="5dp"
             android:gravity="center"
             android:text="ID/PW찾기"
-            android:textColor="#ffffff">
+            android:textColor="#000000">
 
         </Button>
     </LinearLayout>
