--- a/app/src/main/res/layout/find_id.xml
+++ b/app/src/main/res/layout/find_id.xml
@@ -51,14 +51,14 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/green_button"
+        android:background="@drawable/rounded_green_button"
         android:layout_marginTop="30dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:gravity="center"
         android:text="찾기"
         android:textSize="20dp"
-        android:textColor="#ffffff">
+        android:textColor="#000000">
 
     </Button>
 
@@ -66,14 +66,14 @@
         android:id="@+id/find_id_cancel"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/green_button"
+        android:background="@drawable/rounded_green_button"
         android:layout_marginTop="30dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:gravity="center"
         android:text="취소"
         android:textSize="20dp"
-        android:textColor="#ffffff">
+        android:textColor="#000000">
 
     </Button>
 
