--- a/app/src/main/res/layout/find_password.xml
+++ b/app/src/main/res/layout/find_password.xml
@@ -55,28 +55,28 @@
         android:id="@+id/find_password_check"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/green_button"
+        android:background="@drawable/rounded_green_button"
         android:layout_marginTop="30dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:gravity="center"
         android:text="찾기"
         android:textSize="20dp"
-        android:textColor="#ffffff">
+        android:textColor="#000000">
     </Button>
 
     <Button
         android:id="@+id/find_password_cancel"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/green_button"
+        android:background="@drawable/rounded_green_button"
         android:layout_marginTop="30dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:gravity="center"
         android:text="취소"
         android:textSize="20dp"
-        android:textColor="#ffffff">
+        android:textColor="#000000">
     </Button>
 
 
