--- a/app/src/main/res/layout/home_group.xml
+++ b/app/src/main/res/layout/home_group.xml
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_weight="5"
-                android:background="@drawable/green_button"
+                android:background="@drawable/rounded_green_button"
                 android:hint="그룹생성">
 
             </Button>
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_weight="5"
-                android:background="@drawable/green_button"
+                android:background="@drawable/rounded_green_button"
                 android:hint="그룹참가">
 
             </Button>
@@ -55,48 +55,25 @@
             android:id="@+id/groupListView"
             android:layout_width="match_parent"
             android:layout_height="524dp"
-            android:layout_below="@id/home_group_create"></ListView>
+            android:layout_below="@id/home_group_create">
+
+        </ListView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:gravity="bottom">
 
             <Button
+                android:id="@+id/home_group_back"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
-                android:layout_marginRight="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/green_button"
-                android:hint="메뉴 화면" />
+                android:layout_height="50dp"
+                android:background="@drawable/rounded_green_button"
+                android:text="뒤로가기"
+                android:textColor="#000000">
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
-                android:layout_marginRight="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/green_button"
-                android:hint="그룹" />
-
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
-                android:layout_marginRight="3dp"
-                android:layout_weight="1"
-                android:background="@drawable/green_button"
-                android:hint="경로 목록" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:background="@drawable/green_button"
-                android:hint="환경 설정" />
+            </Button>
         </LinearLayout>
 
     </LinearLayout>
