--- a/app/src/main/res/layout/select_find.xml
+++ b/app/src/main/res/layout/select_find.xml
@@ -44,14 +44,14 @@
         android:id="@+id/select_find_cancel"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/green_button"
+        android:background="@drawable/rounded_green_button"
         android:layout_marginTop="30dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:gravity="center"
         android:text="취소"
         android:textSize="20dp"
-        android:textColor="#ffffff">
+        android:textColor="#000000">
     </Button>
 
 </LinearLayout>
