--- a/app/src/main/res/layout/sign_up_main.xml
+++ b/app/src/main/res/layout/sign_up_main.xml
@@ -58,9 +58,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="회원가입"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/green_button"/>
+        android:background="@drawable/rounded_green_button"/>
 
     <!-- 뒤로가기 버튼 -->
     <Button
@@ -68,8 +68,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="뒤로가기"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/green_button"/>
+        android:background="@drawable/rounded_green_button"/>
 
 </LinearLayout>
